// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Panel alwaysExpanded=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel alwaysExpanded=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkGrammar=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkGrammar=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkHighlight=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkHighlight=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkSpaces=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel checkSpaces=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel className="my-classname" 1`] = `
<div
  className="uu5-bricks-panel my-classname uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="brown"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="brown-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="cyan"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="cyan-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="default"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="green"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="green-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="grey"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="grey-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="orange"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="orange-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="pink"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="pink-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="purple"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="purple-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="red"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="red-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="yellow"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema="yellow-rich"
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="This is Content from ContentMixin"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel content=12345 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content={12345}
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel controlled=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel controlled=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel default props 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel disableHeaderClick=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _disableHeaderClick={false}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel disableHeaderClick=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _disableHeaderClick={true}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel disabled=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel disabled=true 1`] = `
<div
  className="uu5-bricks-panel uu5-common-disabled uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Panel dynamic=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel dynamic=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel expanded=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel expanded=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-expanded uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    _expanded={true}
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content={
      <div>
        Header of section
      </div>
    }
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel hidden=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel hidden=true 1`] = `
<div
  className="uu5-bricks-panel uu5-common-hidden uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel iconCollapsed="uu5-minus" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _icon="uu5-minus"
    _onClick={[Function]}
    content="noHeader"
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel iconExpanded="uu5-plus" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel id="myId" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="myId"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="myId-header"
    key="myId-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="myId-body"
    key="myId-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="0" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="1" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="2" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="3" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="4" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="5" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level="6" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=0 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=1 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=2 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=3 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=4 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=5 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel level=6 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel mountContent="onEachExpand" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel mountContent="onFirstExpand" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel mountContent="onFirstRender" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel name="myName" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_blockNextChildUpdate": false,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "alwaysExpanded": false,
        "bgStyle": null,
        "bgStyleContent": null,
        "bgStyleHeader": null,
        "borderRadius": null,
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "contentEditable": true,
        "controlled": true,
        "disableHeaderClick": undefined,
        "disabled": false,
        "dynamic": false,
        "elevation": null,
        "expanded": false,
        "footer": null,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "iconAlign": null,
        "iconCollapsed": null,
        "iconExpanded": null,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "mountContent": undefined,
        "name": null,
        "nestingLevel": "inline",
        "noIndex": false,
        "onClick": null,
        "openClick": null,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "expanded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "renderChild": true,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Panel",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit panel",
          "en": "Edit panel",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle="Panel"
  modalHeader="Panel"
/>
`;

exports[`UU5.Bricks.Panel nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_blockNextChildUpdate": false,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "alwaysExpanded": false,
        "bgStyle": null,
        "bgStyleContent": null,
        "bgStyleHeader": null,
        "borderRadius": null,
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "contentEditable": true,
        "controlled": true,
        "disableHeaderClick": undefined,
        "disabled": false,
        "dynamic": false,
        "elevation": null,
        "expanded": false,
        "footer": null,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "iconAlign": null,
        "iconCollapsed": null,
        "iconExpanded": null,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "mountContent": undefined,
        "name": null,
        "nestingLevel": "smallBox",
        "noIndex": false,
        "onClick": null,
        "openClick": null,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "expanded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "renderChild": true,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Panel",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit panel",
          "en": "Edit panel",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle="Panel"
  modalHeader="Panel"
/>
`;

exports[`UU5.Bricks.Panel nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_blockNextChildUpdate": false,
      "_domNode": null,
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "alwaysExpanded": false,
        "bgStyle": null,
        "bgStyleContent": null,
        "bgStyleHeader": null,
        "borderRadius": null,
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "contentEditable": true,
        "controlled": true,
        "disableHeaderClick": undefined,
        "disabled": false,
        "dynamic": false,
        "elevation": null,
        "expanded": false,
        "footer": null,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "iconAlign": null,
        "iconCollapsed": null,
        "iconExpanded": null,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "mountContent": undefined,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "noIndex": false,
        "onClick": null,
        "openClick": null,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "expanded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "renderChild": true,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Panel",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Upravit panel",
          "en": "Edit panel",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle="Panel"
  modalHeader="Panel"
/>
`;

exports[`UU5.Bricks.Panel nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel noIndex=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel noIndex=true 1`] = `
<div
  className="uu5-bricks-panel uu5-noindex uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel props.Function UU5.Bricks.Panel -  onClick() should be called 1`] = `
<Panel
  id="uuID"
  onClick={[Function]}
>
  onClick
</Panel>
`;

exports[`UU5.Bricks.Panel pureRender=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel pureRender=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel selected=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel selected=true 1`] = `
<div
  className="uu5-bricks-panel uu5-common-selected uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel size="l" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-l uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel size="m" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel size="s" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-s uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel size="xl" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-xl uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel textCorrector=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel textCorrector=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel underline=false 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={false}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;

exports[`UU5.Bricks.Panel underline=true 1`] = `
<div
  className="uu5-bricks-panel uu5-bricks-panel-size-m uu-bricks-rv9efr uu5-bricks-panel-default"
  id="uuID"
  style={Object {}}
  title={null}
>
  <panel-header
    _bgStyle="filled"
    _colorSchema={null}
    _onClick={[Function]}
    content="noHeader"
    iconAlign={null}
    id="uuID-header"
    key="uuID-header"
    style={
      Object {
        "borderRadius": null,
      }
    }
    underline={true}
  />
  <panel-body
    borderRadius={null}
    content="noBody"
    id="uuID-body"
    key="uuID-body"
  />
</div>
`;
